# NoodlesPlusPlus

./: .gitmodules  CMakeLists.txt  README.md
include/: noo_any.cpp  noo_any.h  noo_anyref.cpp  noo_anyref.h  noo_client_interface.cpp  noo_client_interface.h  noo_common.cpp  noo_common.h  noo_id.h  noo_include_glm.h  noo_interface_types.cpp  noo_interface_types.h  noo_server_interface.cpp  noo_server_interface.h
libnoodles/: CMakeLists.txt
libnoodles/client/: clientmessagehandler.cpp  clientmessagehandler.h  clientstate.cpp  clientstate.h
libnoodles/include/: CMakeLists.txt  client_interface.cpp  client_interface.h  common.cpp  id.h  interface_types.cpp  interface_types.h  noo_any.cpp  noo_any.h  noo_anyref.h  noo_client_interface.cpp
old_src/client_lib/: CMakeLists.txt  client_interface.cpp  clientstate.cpp  clientstate.h
old_src/example_client/: CMakeLists.txt  attachedmethodlistmodel.h  delegates.h  ex_res.qrc  example_client.cpp  example_client.h  example_client.ui  main.cpp  methoddialog.h  tableexplorer.cpp  tableexplorer.ui
old_src/example_server/: CMakeLists.txt
old_src/qml_client/: attachedmethodlistmodel.h  delegates.h  state.cpp
old_src/server_lib/: CMakeLists.txt  bufferlist.h  componentlistbase.cpp  componentlistbase.h  materiallist.h  meshlist.h  methodlist.cpp  methodlist.h  noodlesserver.cpp  objectlist.h  search_helpers.h  server_interface.cpp  server_interface.h  tablelist.cpp  tablelist.h
old_src/shared/: CMakeLists.txt  interface_tools.h  noodles_generated.h  noodles_server_generated.h  variant_tools.h
src/: CMakeLists.txt  README.md
src/client/: CMakeLists.txt  client_common.cpp  client_common.h  clientmessagehandler.cpp  clientmessagehandler.h  clientstate.cpp  clientstate.h
src/client_lib/: client_interface.h  clientmessagehandler.cpp  clientmessagehandler.h
src/common/: CMakeLists.txt  enum_tools.h  serialize.cpp  serialize.h  variant_tools.h
src/example_client/: abstracttreemodel.cpp  abstracttreemodel.h  attachedmethodlistmodel.cpp  componentlistmodel.cpp  componentlistmodel.h  delegates.cpp  methoddialog.cpp  methoddialog.ui  tableexplorer.h
src/example_client/instance_material/: qinstancedmetalroughmaterial.h
src/qml_client/: CMakeLists.txt
src/server/: CMakeLists.txt  assetstorage.cpp  assetstorage.h  bufferlist.cpp  bufferlist.h  componentlistbase.cpp  componentlistbase.h  materiallist.cpp  materiallist.h  meshlist.cpp  meshlist.h  methodlist.cpp  methodlist.h  noodlesserver.cpp  noodlesserver.h  noodlesstate.cpp  noodlesstate.h  objectlist.cpp  objectlist.h  plotlist.cpp  plotlist.h  search_helpers.h  serialize.h  tablelist.cpp  tablelist.h  texturelist.cpp  texturelist.h
src/server_lib/: bufferlist.cpp  materiallist.cpp  meshlist.cpp  noodlesserver.h  noodlesstate.h  objectlist.cpp  serialize.cpp  serialize.h  server_interface.h  tablelist.cpp  texturelist.cpp  texturelist.h
src/shared/: generate.sh  include_glm.h  interface_tools.cpp  interface_types.cpp  interface_types.h
